/**
 * loosely based on messages defined in models/src/main/protobuf/RhoTypes.proto
 */
 syntax = "proto3";

 package firefly;

 message Name {
	string first = 1;
	string last = 2;
 }

 message Address {
	string street = 1;
	string city = 2;
	string state = 3;
	string zip = 4;
 }

 message Entry {
	Name name = 1;
	Address address = 2;
	string email = 3;
	string phone = 4;
 }

 message ProduceData {
	Entry data = 1;
	string match_case = 2;
	bool persistent = 3;
 }

 message ConsumeData {
	string pattern = 1;
	string continuation = 2;
	bool persistent = 3;
 }

 message OptionResult {
	string continuation = 1;
	Entry data = 2;
 }

/** 
	* alias: get or produce
	*/
 message Send {
	string chan = 1;
	Entry data = 2;
	string match_case = 3;
	bool persistent = 4;
}

/** 
	* alias: put or consume
	* patterns here refer to Match in RhoTypes.proto
	*/
message Receive {
	repeated string channels = 1;
	repeated string patterns = 2;
	string continuation = 3;
	bool persistent = 4;
}